[gd_scene load_steps=14 format=3 uid="uid://brwkqb301sd1k"]

[ext_resource type="Script" uid="uid://dsrgblnb56bx1" path="res://Assets/Scripts/trashboy.gd" id="1_i7s4p"]
[ext_resource type="Texture2D" uid="uid://b5m7qc7l7r0di" path="res://Assets/Sprites/TrashBoy/TrashBoyBodyBehind.png" id="1_ly0ef"]
[ext_resource type="PackedScene" uid="uid://b6qihiw6g2tgu" path="res://Assets/Scenes/Objects/trash_projectile.tscn" id="2_gwhbo"]
[ext_resource type="Texture2D" uid="uid://ctyjrfei45it6" path="res://Assets/Sprites/TrashBoy/TrashBoyFace.png" id="2_i7s4p"]
[ext_resource type="Texture2D" uid="uid://1nh03cswfirw" path="res://Assets/Sprites/TrashBoy/TrashBoyBody.png" id="3_gwhbo"]
[ext_resource type="Texture2D" uid="uid://bdhk7by4eh13o" path="res://Assets/Sprites/TrashBoy/TrashBoyHat.png" id="4_qoquj"]

[sub_resource type="Animation" id="Animation_gwhbo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scalar/Hat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scalar/Face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_qoquj"]
resource_name = "lower"
length = 0.46667004
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scalar/Hat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.46666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 120)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scalar/Face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.46666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 140)]
}

[sub_resource type="Animation" id="Animation_mmrv6"]
resource_name = "raise"
length = 0.46667004
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scalar/Hat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.46666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 120), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scalar/Face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.46666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 140), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7msl6"]
resource_name = "stay_high"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scalar/Hat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scalar/Face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_br4h3"]
resource_name = "stay_low"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scalar/Hat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 120)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scalar/Face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 140)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qwn3f"]
_data = {
&"RESET": SubResource("Animation_gwhbo"),
&"lower": SubResource("Animation_qoquj"),
&"raise": SubResource("Animation_mmrv6"),
&"stay_high": SubResource("Animation_7msl6"),
&"stay_low": SubResource("Animation_br4h3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_i7s4p"]
radius = 301.12457

[node name="TrashBoy" type="Node2D"]
script = ExtResource("1_i7s4p")
ProjectilePrefab = ExtResource("2_gwhbo")
RaiseTime = 0.3

[node name="Scalar" type="Node2D" parent="."]
position = Vector2(2, -44)
scale = Vector2(0.15, 0.15)

[node name="BackBehind" type="Sprite2D" parent="Scalar"]
texture = ExtResource("1_ly0ef")

[node name="Face" type="Sprite2D" parent="Scalar"]
texture = ExtResource("2_i7s4p")

[node name="Body" type="Sprite2D" parent="Scalar"]
texture = ExtResource("3_gwhbo")

[node name="Hat" type="Sprite2D" parent="Scalar"]
texture = ExtResource("4_qoquj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qwn3f")
}

[node name="MonitorZone" type="Area2D" parent="."]
position = Vector2(0, -62)
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MonitorZone"]
shape = SubResource("CircleShape2D_i7s4p")

[connection signal="body_entered" from="MonitorZone" to="." method="_on_monitor_zone_body_entered"]
[connection signal="body_exited" from="MonitorZone" to="." method="_on_monitor_zone_body_exited"]
